# pdm-explorations

./: README.md
baser/: README.md  pyproject.toml
baser/src/baser/: collatz.py
pdm-test/: README.md  pyproject.toml  version.py
pdm-test/src/pdm_test/: cli.py  conjectures.py
staticserver/: server.py
staticserver/baser/: baser-0.1.0-py3-none-any.whl
staticserver/pdm-test/: pdm_test-0.1.0+2023-py3-none-any.whl
