[project]
name = "pdm-test"
description = ""
authors = [
    {name = "runeblaze", email = "runeblaze@excite.co.jp"},
]
dependencies = [
    "typer>=0.9.0",
    "baser>=0.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[project.scripts]
collatz = "pdm_test.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "call"
getter = "version:get_version" # the getter of version

[[tool.pdm.source]]
name = "private"
url = "http://${PYPI_USERNAME}:${PYPI_PASSWORD}@localhost:8000/"